--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
     </section>
 
     <section class="slide">
-        <h2>Schedule</h2>
+        <h2>Steps</h2>
         <ol>
-            <li>What is Vue.js</li>
-            <li>AppStore in Vue - Vuex</li>
-            <li>Vue vs. Melody</li>
-            <li>Nuxt and Vue - what's the difference</li>
-            <li>Nuxt - server side rendering</li>
-            <li>Nuxt - modules</li>
-            <li>Create nuxt app</li>
+            <li><a href="#3">What is Vue.js</a></li>
+            <li><a href="#5">Vue.js syntax and basics</a></li>
+            <li><a href="#20">Store for Vue - Vuex</a></li>
+            <li><a href="#22">Vue vs. Melody</a></li>
+            <li><a href="#nuxt-features">Nuxt and Vue - what's the difference</a></li>
+            <li><a href="#27">Creating nuxt app</a></li>
+            <li><a href="#28">Test application with 7 TODO's</a></li>
         </ol>
     </section>
 
