add owliphy in the end

--- a/index.html
+++ b/index.html
@@ -117,6 +117,13 @@
     </section>
 
     <section class="slide">
+        <h2>Let's build something here</h2>
+        <p>Let's create a <b>click counter</b>! (finally something useful and production-like!) </p>
+        <p class="next">Show how many button clicks is made</p>
+        <p class="next">Show 🌚 for every 5 clicks made</p>
+    </section>
+
+    <section class="slide">
         <h2>Template syntax</h2>
         <pre>
             <code class="no-num">&lt;p <mark class="comment">v-if="var"</mark>&gt;Hide or show&lt;/p&gt;</code>
@@ -166,7 +173,6 @@
             <code>    titleMessage: 'Hello dude',</code>
             <code>  }),</code>
         </pre>
-    </section>
     </section>
 
     <section class="slide">
@@ -258,18 +264,6 @@
             <code class="mark">    fullName: function() {</code>
             <code class="mark">      return `${this.lastName} ${this.firstName}` }</code>
         </pre>
-    </section>
-
-    <section class="slide">
-        <h2>Build your component</h2>
-        <ol>
-            <li>Run <code>yarn dev</code></li>
-            <li>Add button and two <code>&lt;p&gt;</code> to template</li>
-            <li>Add <code>data</code> property to the component to store boolean</li>
-            <li>Add <code>methods</code> property and create method for click</li>
-            <li>Append <code>@click</code> to button and assign click method that will show first <code>&lt;p&gt;</code> on click</li>
-            <li>Add <code>computed</code> property that will change second text upon first <code>&lt;p&gt;</code> text is shown</li>
-        </ol>
     </section>
 
     <section class="slide">
@@ -461,6 +455,16 @@
             <li><a href="https://nuxtjs.org/api/pages-fetch#the-fetch-method">fetch method</a></li>
         </ul>
     </section>
+
+    <section class="slide">
+        <h2>Scaling to production-ready app</h2>
+        <figure>
+            <a href="https://owliphy.com">
+                <img class="cover" src="pictures/owliphy.svg" alt="owliphy logo">
+            </a>
+        </figure>
+    </section>
+
 
     <section class="slide" id="thanks">
         <img src="pictures/thanks.gif" class="thanks-img">
